# CV_takehome_challenge

./: CMakeLists.txt  groundFit.cpp  groundFit.hpp  main.cpp  main_pcl.cpp  parse_json.cpp  parse_json.hpp  ply_stream.hpp  project_Camera.cpp  project_Camera.hpp
output/: Ransac_camera_ground_points.ply  Ransac_ground_points.ply  pcl_camera_ground_points.ply  pcl_ground.ply
